fix profile picture alignment and add data analysis

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2182,7 +2182,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .banner-right {
-  margin-top: 100px;
+  /* margin-top: 100px; */
+  /* margin-top: 3%; */
+}
+
+@media (min-width: 800px) {
+  #intro{
+    margin-top: 4%;
+    padding-bottom: 2%;
+  }
 }
 
 @media (max-width: 800px) {
